# okgame

./: .gitignore  CMakeLists.txt  COMPILING.md  LICENSE  README.md  _build.bat  _copy.bat  _make distro.bat  bobsgame.sln  bobsgame.tss  bobsgame.vcxproj  bobsgame.vcxproj.bak  bobsgame.vcxproj.filters  bobtypes.h  meson.build  meson.build.bak  oktypes.h  resharper.DotSettings  stdafx.h  visual studio settings.vssettings
android-project/jni/: Application.mk
data/: PreloadDialogueData  PreloadEventData  PreloadFlagData  PreloadGameStringData  PreloadMapData  PreloadMusicData  PreloadSkillData  PreloadSoundData  PreloadSpriteData
data/ControllerMapTool/: README.txt
data/misc/: swearlist.txt
data/shaders/: colorAdjust.frag
enc_temp_folder/92fb4850f3b83be6f0b02bc891724c5f/: Event.cpp
gwen/: GWEN.sln  Renderer-OpenGL_TruetypeFont.vcxproj.filters
lib/: base64.h  md5.cpp  md5.h
lib/GWEN-master/: .gitignore
lib/HQ2X/: HQ2X.cpp  HQ2X.h
lib/imgui-1.88/DearImGuiSDL-main/: CMakeLists.txt  LICENSE  README.md
lib/imgui-1.88/DearImGuiSDL-main/test/: CMakeLists.txt  CTest.c  CppTest.cpp  TestImage.h
lib/modplay-master/: ModPlay_Test.rar  README.md  modfile.monkey  modplay.monkey
lib/nanogui-sdl-master/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NanoGUI-SDL.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bin2c.vcxproj  bin2c.vcxproj.filters  cmake_install.cmake  example1.vcxproj  example1.vcxproj.filters  example2.vcxproj  example2.vcxproj.filters  nanogui.vcxproj  nanogui.vcxproj.filters
lib/nngui-master/: CMakeLists.txt  README.md  nngui.cpp  nngui.h  nngui_demo1.cpp  nngui_demo2.cpp  nngui_resources.cpp
lib/poco-1.7.8p3-all/: MANIFEST  VERSION  __bob build.bat  buildwin.cmd  config.make
linux/: libPocoFoundation.so.48  libPocoNet.so.48  libPocoZip.so.48  libSDL2_image-2.0.so.0  libSDL2_mixer-2.0.so.0  libSDL2_net-2.0.so.0  libSDL2_ttf-2.0.so.0  libboost_serialization.so.1.64.0  libdrm.so.2  libsndfile.so.1  prepare_for_launch.sh  prepare_for_launch.sh~  readme linux.txt
macos/: libPocoFoundation.48.dylib  libPocoJSON.48.dylib  libPocoNet.48.dylib  libPocoUtil.48.dylib  libPocoXML.48.dylib  libPocoZip.48.dylib  libboost_serialization.dylib  prepare_for_launch.sh
src/: main.cpp  main.h  main.h.bak
src/Engine/: Engine.cpp  Engine.h  EnginePart.cpp  EnginePart.h  MiniGameEngine.cpp  MiniGameEngine.h
src/Puzzle/: Block.cpp  Block.h  Block.h.bak  BobsGame.cpp  BobsGame.h  BobsGameMenus.cpp  BobsGameNetwork.cpp  CustomGameEditor.cpp  CustomGameEditor.h  GameLogic.cpp  GameLogic.h  GameLogic.h.bak  GameSequence.cpp  GameSequence.h  GameSequenceEditor.cpp  GameType.cpp  (+17 more)
(+7849 files in other folders)
